samples/_failures_safe/1761040245_8d5f8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6604545c.c: In function ‘main’:
./samples/SAFE/__tmp_6604545c.c:164:16: error: missing terminating " character
  164 |         printf("Failed to add transition
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6604545c.c:164:9: error: expected expression at end of input
  164 |         printf("Failed to add transition
      |         ^~~~~~
./samples/SAFE/__tmp_6604545c.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6604545c.c:164:9: error: expected declaration or statement at end of input
